@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.837 2003/03/14 13:54:52 jonnymind Exp $
+ * $Id: ChangeLog,v 1.838 2003/03/14 20:35:07 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-03-14 14:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbvm.h
+  * source/vm/errorapi.c
+  * source/vm/hvm.c
+  * source/vm/mainlgtk.c
+  * source/vm/mainpm.c
+  * source/vm/mainstd.c
+  * source/vm/mainwin.c
+    * Reverted recent Fixe to avoid EXIT procedures when quiting due to an Error (Clipper compaatibility).
+    ! More Clipper compatible implementation to avoid recursive call to EXIT procedure if error encountered.
 
 2003-03-14 12:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbvm.h
